# rain-timer

./: .gitignore  CMakeLists.txt
.github/workflows/: mingw-build.yml
src/: connect_widget.cpp  connect_widget.h  connect_widget.ui  main.cpp  port_handler.cpp  port_handler.h  wg_light.cpp  wg_light.h  wg_light.ui  wg_sound.cpp  wg_sound.h  wg_sound.ui  wg_water.cpp  wg_water.h  wg_water.ui  widget.cpp  widget.h  widget.ui
winbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
winbuild/rain-timer_autogen/: moc_predefs.h  mocs_compilation.cpp
winbuild/rain-timer_autogen/UVLADIE3JM/: moc_connect_widget.cpp  moc_port_handler.cpp  moc_wg_light.cpp  moc_wg_sound.cpp  moc_wg_water.cpp  moc_widget.cpp
winbuild/rain-timer_autogen/include/: ui_connect_widget.h  ui_wg_light.h  ui_wg_sound.h  ui_wg_water.h  ui_widget.h
